@@ -1,7 +1,13 @@
 # Quest for the Sword 
 A short text based game where you gather items to become more powerful and defeat the final boss.
 
-## Instillation process
+## Installation process
 1. Clone github repo to a folder of your choice.
 2. Run Main.java
 3. Enjoy the game.
+
+## Functionality
+On final versions all methods and processes work as intended
+
+## NOTE
+If running in Java above version 1.8 make sure the Javafx build path is set and runtime arguements are --module-path "PathTo\javafx-sdk-11.0.2\lib" --add-modules javafx.controls,javafx.fxml
